--- a/package.json
+++ b/package.json
@@ -10,10 +10,6 @@
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --prod"
   },
-  "engines": {
-    "node": "6.11.0",
-    "npm": "3.10.10"
-  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.6",
@@ -35,11 +31,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.6",
-    "@angular/cli": "^11.0.6",
-    "@angular/compiler-cli": "~11.0.6",
+    "@angular/cli": "^11.0.7",
+    "@angular/compiler-cli": "^11.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
@@ -51,5 +48,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "engines": {
+    "node": "14.15.4",
+    "npm": "6.14.10"
   }
 }
